# zero2prod

./: Cargo.toml  Dockerfile  justfile
.cargo/: config.toml
.github/workflows/: general.yml
scripts/: init_db.sh
src/: app.rs  configuration.rs  lib.rs  main.rs  router.rs
src/routes/: subscriptions.rs
tests/: health_check.rs
tests/api/: health_check.rs  helpers.rs  main.rs  subscriptions.rs
